--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-to-the-future",
   "version": "0.1.0",
+  "main": "App.js",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.2.1",
@@ -13,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^0.2.4"
   },
