--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-icons": "^3.11.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
